--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Capdevila Lucas"/>
-  <meta name="description" content="Trabajo Práctico de JavaScript" />
+  <meta name="description" content="Trabajo Práctico N°1 de JavaScript - Rolling Code" />
   <meta name="keywords" content="javascript, ECMAScript, js, consola" />
 
   <title>JavaScript - Trabajo Práctico 1</title>
